--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,8 @@ MONGODB_URI="mongodb+srv://MohdNawaz:Ds6lyF2LxgE01WT5@cluster0.jdnqr.mongodb.net
 CLOUDINARY_NAME = 'duppeitju'
 CLOUDINARY_APIKEY = '963242898998466'
 CLOUDINARY_SECRETKEY = 'yDMeO48qyIMxLt6kwbWkwy9Lo1s'
+
+
+ADMIN_EMAIL = 'mohdNawaz@demo.com'
+ADMIN_PASSWORD = 'qwerty456'
+JWT_SECRET = 'NawazDev'
