--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.6",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
